Fix the vm's extobj list
The vm's extobj list breaks if multiple vmas are set up to the same extobj. We need to fix that.
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
The vm's extobj list breaks if multiple vmas are set up to the same extobj. We need to fix that.
assigned to @thomash
mentioned in merge request !261 (closed)
added BUG label
mentioned in issue #239 (closed)
assigned to @mlankhorst and unassigned @thomash
closed
mentioned in commit 07b6fca5